2014-11-26  Murray Stokely  <mstokely@google.com>

	Address feedback from anonymous reviewer for JSS to make this
	package more complete:

	* inst/unitTests/runit.serialize_pb.R: Add a test to verify that
	we can serialize all 100+ built-in datasets with R and get an
	identical object to the original once unserialized.

	* R/rexp_obj.R: Serialize function, language, and environment
	objects by just falling back to R's native serialization and using
	raw bytes to store them.  This at least lets us round-trip encode
	all native R types, even though these three only make sense in the
	context of R.  Greatly simplify the can_serialize_pb function.

	* inst/proto/rexp.proto: Add support for function, language, and
	  environment objects.

2014-11-25  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RProtoBuf-intro.Rnw: Applied a few corrections spotted by
	Tim Hesterberg and communicated in email.

2014-11-24  Murray Stokely  <mstokely@google.com>

	* inst/unitTests/runit.golden.message.R: remove trailing
	  whitespace.
	* man/P.Rd: Improve output of example.

2014-09-15  Murray Stokely  <mstokely@google.com>

	Address feedback from anonymous reviewers for our Journal of
	Statistical Software submission:
	* src/wrapper_EnumDescriptor.cpp (rprotobuf): Correct the
	  definition of as.list for EnumDescriptors to return a proper list
	  instead of a named vector.
	* man/aslist.Rd: clarify order of returned list for descriptor
	  objects.
	* NAMESPACE: add names as exported method.
	* R/00classes.R (show): Update the default print methods to use
	  cat() with fill=TRUE instead of show() to eliminate the confusing
	  [1] since the classes in RProtoBuf are not vectorized.
	* Make Descriptor and EnumDescriptor objects subsettable with
	  "[[".
	* Add length() method for Descriptor objects.
	* Add names() method for Message, Descriptor, and EnumDescriptor
	  objects.
	* inst/unitTests/runit.enums.R (test.enums): Add test of
	  subsetting an EnumDescriptor object.